--- a/styles.css
+++ b/styles.css
@@ -13,8 +13,6 @@ body {
 header {
     text-align: center;
     padding: 20px;
-    background-color: #f4f4f4;
-    border-bottom: 1px solid #ccc;
 }
 
 header h1, header h2 {
@@ -26,10 +24,18 @@ header h1, header h2 {
     justify-content: space-between;
     align-items: center;
     padding: 20px;
+    position: relative;
+    width: 100%; 
+    max-width: 1150px; 
+    height: 30px; 
+    margin: 0 auto; 
+    background-color: #f9f9f9; 
+    border-bottom: 1px solid #666666; 
 }
 
-.group-info p {
-    margin: 0;
+.group-info {
+    text-align: center; 
+    width: 100%; 
 }
 
 .photo-container {
@@ -39,9 +45,12 @@ header h1, header h2 {
 }
 
 .student-photo {
-    width: 100px;
+    position: absolute;
+    top: -155%;
+    left: 93%;
+    width: 80px;
     height: auto;
-    border-radius: 50%;
+    border-radius: 10%;
 }
 
 .lab-nav {
